<resources>
    <string name="app_name">BuddyBook</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="action_clear_search">Clear search history</string>
    <string name="action_export_csv">Export CSV</string>
    <string name="action_do_backup">Backup/Restore</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="action_remove">Remove</string>
    <string name="action_copy">Copy to folder…</string>
    <string name="action_lend">Lend this book</string>
    <string name="action_return_lend">Return this book</string>
    <string name="action_have_this">I have this</string>
    <string name="action_move_to">Move to folder…</string>
    <string name="added_to_folder">Book added to folder %1$s</string>
    <string name="copied_to_folder">Book copied to folder %1$s</string>
    <string name="book_deleted">Book deleted</string>
    <string name="redo">Redo</string>
    <string name="success_sign_in">You\'re now signed in!</string>
    <string name="success_lend_book">Book\'s been lent successfully!</string>
    <string name="success_add_book">Book inserted successfully!</string>
    <string name="widget_cd">Buddybook widget</string>
    <string name="dialog_return_book_title">Returning a book?</string>
    <string name="dialog_return_book_body">Is %1$s returning this book?</string>
    <string name="facebook_application_id" translatable="false">1512425405485278</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb1512425405485278</string>
    <string name="tab_top_books">Explore</string>
    <string name="tab_my_books">My books</string>
    <string name="item_add_folder">Add folder</string>
    <string name="app_label">BuddyBook</string>
    <string name="search_hint">Book tittle, author…</string>
    <string name="dialog_message">This will also remove all books saved on this folder</string>
    <string name="dialog_title">Delete %1$s?</string>
    <string name="dialog_title_lend">Lend book</string>
    <string name="pick_folder">Move to folder…</string>
    <string name="sort_options">Sort by</string>
    <string name="folder_already_exits">Folder already exists</string>
    <string name="folder_desc_empty">Folder description cannot be empty</string>
    <string name="lend_name_empty">Name cannot be empty</string>
    <string name="lend_email_empty">Email cannot be empty</string>
    <string name="lend_email_invalid">Email invalid</string>
    <string name="no_internet">No internet connection</string>
    <string name="dialog_btn_positive">Yes</string>
    <string name="dialog_btn_ok">OK</string>
    <string name="dialog_btn_cancel">Cancel</string>
    <string name="title_activity_detail">Book details</string>
    <string name="error_adding_card">Error loading fragments</string>
    <string name="simple_scanner_activity">Bar code reader</string>
    <string name="transition_image" translatable="false">transition_image</string>
    <string name="dialog_name_hint">Name</string>
    <string name="dialog_email_hint">Email (optional)</string>
    <string name="lent_to">Lent to: %1$s</string>
    <string name="lent_to_email">Email: %1$s</string>
    <string name="lent_day_ago">Date:%3d days ago</string>
    <string name="day_ago">%3d days \n ago</string>
    <string name="folder_empty">Folder is empty</string>
    <string name="btn_scan_book_cd">Scan book ISBN code</string>
    <string name="cover_book_cd">Book cover: %1$s</string>
    <string name="receiver_name_cd">Receiver name</string>
        <string name="ad_app_id" translatable="false">ca-app-pub-6526073251385305~4440436428</string>
        <string name="ad_inter_scanner_activity" translatable="false">ca-app-pub-6526073251385305/5917169627</string>
        <string name="ad_bottom_details" translatable="false">ca-app-pub-6526073251385305/7915280029</string>
        <string name="ad_bottom_books_main" translatable="false">ca-app-pub-6526073251385305/7393902820</string>
        <string name="aboutLibraries_description_showIcon" translatable="false">true</string>
        <string name="aboutLibraries_description_showVersion" translatable="false">true</string>
        <string name="aboutLibraries_description_text">

             <![CDATA[
             This is an open source project and you can find the source code on my <a href="https://github.com/victoraldir/BuddyBook" >GitHub</a>.
              <br/>
              Below you can find open source libraries used in this project.
              <br/> If you find any <b>bug</b> or <b>suggestion</b>, please open an issue in here <a href="https://github.com/victoraldir/BuddyBook/issues" >Issues</a>
              <br/>
              <br/>
              Developed with \u2764 by <a href="https://about.me/victoraldir">Victor Neves</a>
    ]]>

        </string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error" translatable="false">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main" translatable="false">Barcode Reader Sample</string>
    <string name="barcode_header" translatable="false">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="activity_title">Read Barcode</string>
    <string name="point_bar_code">Point to a bar code. Pinch/Stretch to zoom</string>
    <string name="action_share">Share</string>
    <string name="checkbook">Check this book</string>
    <string name="borrowed_book">Lent book</string>
    <string name="no_flash">Flash is not available</string>
    <string name="flash_on">Flash is ON</string>
    <string name="flash_off">Flash is OFF</string>
    <string name="lorem_ipsum_short" translatable="false">Lorem ipsum dolor sit amet</string>
    <string name="lorem_ipsum_medium" translatable="false">Lorem ipsum dolor sit amet,consectetur adipiscing elit</string>
    <string name="lorem_ipsum_large" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="empty_list">No data</string>
    <string name="move_to_folder_cd">Move to folder</string>
    <string name="lent_book_cd">Lend book action</string>
    <string name="folder_icon_cd">Folder icon</string>
    <string name="add_new_folder_cd">Add new folder action</string>
    <string name="my_books_folder_cd">My books folder</string>
    <string name="profile_icon_cd">Profile Icon</string>
    <string name="folders">Folders</string>
    <string name="add_new_folder">Add new folder</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="name">Name</string>
    <string name="title">Title</string>
    <string name="author">Author (optional)</string>
    <string name="publisher">Publisher (optional)</string>
    <string name="book_title">Book Title</string>
    <string name="search">Search</string>
    <string name="add_book">Save</string>
    <string name="add_sort">Sort</string>
    <string name="borrowed_book_icon_cd">Borrowed book icon</string>
    <string name="btn_return_book_cd">Return this book</string>
    <string name="btn_lend_book_cd">Lend this book</string>
    <string name="receiver_email_cd">Receiver email (optional)</string>
    <string name="search_clear">Search history is clear</string>
    <string name="dialog_upgrade">Upgrade to pro</string>
    <string name="dialog_add_book">Add custom book</string>
    <string name="dialog_upgrade_message">You reached out the free tier of usage. Please, upgrade to pro version and get unlimited folders and books with no ads. Plus, you pay me a coffee =D</string>
    <string name="dialog_btn_updgate">Upgrade to PRO</string>
    <string name="folder_empty_hint">You can get started by searching for a book or scaning a bar code</string>
    <string name="btn_search_hint">Search</string>
    <string name="search_empty">Nothing to show</string>
    <string name="search_empty_hint">Type a title, author, or use the ISBN searcher (barcode)</string>
    <string name="no_internet_search">Not connected. Showing local books</string>
    <string name="insert_success">Book inserted successfully</string>
    <string name="no_description">No description available for this book</string>
    <string name="title_empty">Title cannot be empty</string>
    <string name="title_author">Author cannot be empty</string>
    <string name="title_publisher">Publisher cannot be empty</string>
    <string name="action_about">About</string>
    <string name="action_to_premium">Upgrade</string>
    <string name="cant_delete_folder"> You can\'t delete @string/my_books_folder_cd</string>
    <string name="sign_in_with_facebook">Login with Facebook</string>
    <string name="sign_in_with_google">Login with Google</string>
    <string name="sign_in_with_email">Login with email</string>
    <string name="tab_search_online">Web</string>
    <string name="pref_sort_key" translatable="false">sort</string>
    <string name="pref_sort_initialized_key" translatable="false">initialized</string>
    <string name="default_sorts_title">Title</string>
    <string name="default_sorts_author">Author</string>
    <string name="default_sorts_release">Release date</string>
    <string name="release_value" translatable="false">publishedDate</string>
    <string name="title_value" translatable="false">title</string>
    <string name="author_value" translatable="false">authors</string>
    <string name="pref_sort_default" translatable="false">0</string>
    <string name="number_of_books">%01d book(s)</string>
    <string name="option_backup">Backup</string>
    <string name="option_restore">Restore</string>
    <string name="send_to">Send to</string>
    <string name="description">Description</string>
    <string name="description_optional">Description (Optional)</string>
    <string name="product_details">Product details</string>
    <string name="actions">Actions</string>
    <string name="pages_details">%1$s page(s)</string>
    <string name="more">See more</string>
    <string name="less">See less</string>
    <string name="annotations">Annotations</string>
    <string name="title_activity_annotation">@string/annotations</string>
    <string name="you_have_no_annotations">You have no annotations.</string>
    <string name="annotation_saved">Annotation saved!</string>
    <string name="folder_deleted">Folder deleted</string>
    <string name="insert_new_book">Insert book</string>
    <string name="more_fields">More fields</string>
    <string name="number_of_pages">Number of pages (optional)</string>
    <string name="language_optional">Language (optional)</string>
    <string name="print_type">Print type (optional)</string>
    <string name="isbn_10">ISBN 10 (optional)</string>
    <string name="isbn_13">ISBN 13 (optional)</string>
    <string name="edit">Edit</string>
</resources>