<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_add_book"
        android:icon="@drawable/ic_action_add"
        android:orderInCategory="100"
        android:title="@string/add_book"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:orderInCategory="200"
        android:title="@string/search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort"
        android:orderInCategory="300"
        android:title="@string/add_sort"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_to_premium"
        android:orderInCategory="400"
        android:title="@string/action_to_premium"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_clear_search"
        android:orderInCategory="500"
        android:title="@string/action_clear_search"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_do_backup"
        android:orderInCategory="600"
        android:title="@string/action_do_backup"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="700"
        android:title="@string/action_about"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_sign_out"
        android:orderInCategory="800"
        android:title="@string/action_sign_out"
        app:showAsAction="never" />

</menu>
