<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/folders">
        <menu>
            <item
                android:id="@+id/nav_my_books"
                android:icon="@drawable/ic_favorite_black_24dp"
                android:title="@string/tab_my_books" />
            <item
                android:id="@+id/nav_add_folder"
                android:icon="@drawable/ic_create_new_folder_black_24dp"
                android:menuCategory="secondary"
                android:title="@string/add_new_folder" />

        </menu>
    </item>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />

        </menu>
    </item>

</menu>
