<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.quartzodev.buddybook.DetailActivity">

    <item
        android:id="@+id/action_edit"
        android:orderInCategory="99"
        android:title="@string/edit"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_lend"
        android:orderInCategory="100"
        android:title="@string/action_lend"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_copy"
        android:orderInCategory="200"
        android:title="@string/action_copy"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_move_folder"
        android:orderInCategory="300"
        android:title="@string/action_move_to"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete"
        android:orderInCategory="400"
        android:title="@string/action_remove"
        app:showAsAction="never" />
</menu>
