<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_actions"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="24dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_action_edit"
                android:layout_margin="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/actions"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                android:layout_margin="8dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <ImageView android:id="@+id/detail_imageView_bookmark"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/move_to_folder_cd"
                android:src="@drawable/ic_folder" />

            <ImageView
                android:id="@+id/detail_imageView_lend_book"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_card_giftcard"
                android:contentDescription="@string/lent_book_cd"
                android:visibility="gone"/>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>