<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="visible"
    android:id="@+id/insert_container">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.quartzodev.buddybook.InsertEditBookActivity">

        <include android:id="@+id/include_book_photo" layout="@layout/content_book_photo"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/include_book_photo">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/insert_edit_editext_title"
                android:layout_width="match_parent"
                android:maxLines="1"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/title"
                android:maxLength="35"
                android:inputType="textPersonName" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_title">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/insert_edit_editext_author"
                android:layout_width="match_parent"
                android:maxLines="1"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/author"
                android:maxLength="25"
                android:inputType="textPersonName" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/layout_publisher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_author">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/insert_edit_editext_publisher"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:hint="@string/publisher"
                    android:ems="10"
                    android:maxLength="25"
                    android:inputType="textPersonName"/>

            </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/btn_more_fields"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:onClick="moreFields"
            android:text="@string/more_fields"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_publisher"
            android:textColor="#0645AD" />

        <include layout="@layout/content_more_fields" ></include>

    </android.support.constraint.ConstraintLayout>

</ScrollView>
